--- a/community/community_index.html
+++ b/community/community_index.html
@@ -627,6 +627,7 @@
                             </ul>
                             <ul class="post-comment-list">
                                 <li class="single-comment">
+                                    <!-- parent comment start  -->
                                     <div class="parent-comment">
                                         <div class="comment-img">
                                             <a href="#">
@@ -657,36 +658,8 @@
                                                 <li><a href="javascript:void(0)" class="replay-tag">Replay</a></li>
                                             </ul>
                                         </div>
+                                        <!-- child comment start  -->
                                         <div class="child-comment">
-                                            <div class="single-replay-comnt">
-                                                <div class="replay-coment-box comment-details">
-                                                    <div class="replay-comment-img">
-                                                        <a href="#">
-                                                            <img src="../assets/images/community/home/news-post/comment03.jpg" alt="image">
-                                                        </a>
-                                                    </div>
-                                                    <div class="replay-comment-details comment-details">
-                                                        <div class="replay-coment-info coment-info">
-                                                            <div>
-                                                                <h6><a class="replay-comnt-name" href="#">Karen Williams</a></h6>
-                                                                <span class="replay-time-comnt">3 Mint Ago</span>
-                                                            </div>
-                                                            <div class="comment-option">
-                                                                <button type="button" class="dropdown-toggle comment-option-btn" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"><i class="fa fa-ellipsis-h" aria-hidden="true"></i></button>
-                                                                <ul class="dropdown-menu comment-option-dropdown" aria-labelledby="dropdownMenuButton1">
-                                                                    <li class="post-option-item" id="editComment"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>  Edit comment</li>
-                                                                    <li class="post-option-item"><i class="fa fa-trash-o" aria-hidden="true"></i>  Delete comment</li>
-                                                                </ul>
-                                                            </div> 
-                                                        </div>
-                                                        <div class="comment-div">
-                                                            <p class="comment-content">Donec rutrum congue leo eget malesuada nulla quis lorem ut libero malesuada feugiat donec rutrum congue leo eget.</p>
-                                                            <button id="textarea_btn" type="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i>
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             <div class="single-replay-comnt">
                                                 <div class="replay-coment-box comment-details">
                                                     <div class="replay-comment-img">
