--- a/community/community_index.html
+++ b/community/community_index.html
@@ -699,6 +699,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <!-- child comment end -->
                                     </div>
                                 </li>
                             </ul>
