--- a/community/my-profile.html
+++ b/community/my-profile.html
@@ -409,7 +409,7 @@
                                   <button class="nav-link" id="photo-tab" data-bs-toggle="tab" data-bs-target="#forPhoto" type="button" role="tab" aria-controls="contact" aria-selected="false">Photo</button>
                                 </li>
                             </ul>
-                            <ul class="profile-social">
+                            <ul class="community-profile-social">
                                 <li><a href="#"><img src="../assets/images/community/myProfile/facebook.png" alt="icon"></a></li>
                                 <li><a href="#"><img src="../assets/images/community/myProfile/twitter.png" alt="icon"></a></li>
                                 <li><a href="#"><img src="../assets/images/community/myProfile/instagram.png" alt="icon"></a></li>
